objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>AssetId__c</fullName>
        <label>AssetId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Billing Elements</relationshipLabel>
        <relationshipName>Price_Book_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CO_Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_ChangePrice__c</fullName>
        <formula>IF( OF_Asset__r.RecordType.Name = &apos;Intervento a vuoto&apos; || OF_Asset__r.RecordType.Name = &apos;Verticale&apos; || 
    OF_Asset__r.RecordType.Name = &apos;P2P&apos; || OF_Asset__r.RecordType.Name = &apos;Fiber Lease&apos; || 
    OF_Asset__r.RecordType.Name = &apos;Fiber Link&apos;,
       HYPERLINK(&apos;/apex/OF_EditPrice?id=&apos; +  Id +&apos;&amp;idAsset=&apos;+  OF_Asset__r.Id,&apos;Modifica&apos;, &apos;_self&apos;),
       &apos;NA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ClusterPromozione__c</fullName>
        <formula>OF_Asset__r.OF_ClusterPromozione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Promozione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceProgettoSpeciale__c</fullName>
        <formula>IF( Product2.OF_Servizio__c = &apos;Open Stream&apos;, OF_Asset__r.OF_ProgettoSpeciale__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progetto Speciale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElementIstanziato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial element istanziato</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.OF_Asset__c</field>
                <operation>equals</operation>
                <valueField>OF_CommercialElementIstanziato__c.OF_Asset__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CommercialElementIstanziato__c</referenceTo>
        <relationshipLabel>Price Book Entries</relationshipLabel>
        <relationshipName>Price_Book_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Comune__c</fullName>
        <formula>OF_Asset__r.OF_Comune__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comune</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Contratto__c</fullName>
        <formula>OF_Asset__r.OF_Contract__r.OF_IdContratto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contratto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataAttivazione2__c</fullName>
        <label>Data attivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataCessazione2__c</fullName>
        <label>Data cessazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataDiCessazione__c</fullName>
        <label>Data cessazione OLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataSospensione__c</fullName>
        <label>Data Sospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Data_Attivazione__c</fullName>
        <formula>OF_Asset__r.OF_DataAttivazione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data attivazione OLD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_Data_Desospensione__c</fullName>
        <label>Data Desospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Descrizione__c</fullName>
        <label>Descrizione</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_GPON__c</fullName>
        <formula>OF_Asset__r.OF_GPON_Attestazione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPON</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDRisorsa__c</fullName>
        <formula>OF_Asset__r.EOF_ID_Risorsa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Risorsa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Price Book Entries</relationshipLabel>
        <relationshipName>Price_Book_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Profilo__c</fullName>
        <formula>OF_Asset__r.OF_ProfiloOpenStream__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profilo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ProgettoSpeciale__c</fullName>
        <formula>IF( Product2.OF_Servizio__c = &apos;GPON Passiva&apos;,  OF_Asset__r.OF_ProgettoSpeciale__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progetto Speciale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Promozione__c</fullName>
        <formula>OF_Asset__r.OF_Promozione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promozione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaApparatoAtt__c</fullName>
        <formula>IF( Product2.OF_Servizio__c = &apos;Open Stream&apos;, OF_CommercialElementIstanziato__r.OF_TipologiaApparato__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipologia Apparato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaApparatoPass__c</fullName>
        <formula>IF( Product2.OF_Servizio__c = &apos;GPON Passiva&apos;,  OF_CommercialElementIstanziato__r.OF_TipologiaApparato1__c ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipologia Apparato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isBonifica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBonifica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numCoppia__c</fullName>
        <label>numCoppia</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tipoApparato__c</fullName>
        <label>tipoApparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>isVerticaleUPD</fullName>
        <active>true</active>
        <errorConditionFormula>and ( 
 CONTAINS (&apos;Verticale&apos;, Product2.Name ),
$User.LastName!=&apos;Integration Verticali&apos;,
$User.Email !=&apos;francesco.casali1@enel.com&apos;,
$User.Email !=&apos;cinzia.orlando@enel.com&apos;,
$User.LastName!=&apos;Atos2&apos; 
)</errorConditionFormula>
        <errorMessage>Solo un processo verticale può modificare questo record</errorMessage>
    </validationRules>
</CustomObject>